@@ -1,3 +1,8 @@
+2012-05-16  Torbjorn Granlund  <tege@gmplib.org>
+
+	* tests/mpf/t-eq.c (check_random): New function, meat from old main().
+	(check_data): New function.
+
 2012-05-13  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/arm/rsh1aors_n.asm: New file.
